# OpenCV_tests

./: .README.md.un~  CMakeLists.txt  CMakeLists2.txt  README.md  README.md~
_BUILD/: .gitignore
include/: header.hpp
src/: header.cpp  main.cpp
